@@ -1,2 +1,2 @@
-Test the default configuration related to handling of concatenated enumeration
-values (see --treat-as-set option).
+Tests the default configuration related to the handling of concatenated
+enumeration values (see --treat-as-set option).
