@@ -1,0 +1,1 @@
+Tests the --follow-iucr-style-guide option.
