@@ -1,0 +1,1 @@
+Tests the --no-follow-iucr-style-guide option.
