@@ -1,0 +1,2 @@
+-D tests/inputs/ddlm_validate/dic/external/DDL_DIC/v4.1.0/ddl.dic
+-I tests/inputs/ddlm_validate/dic/external/DDL_DIC/v4.1.0
