@@ -1,0 +1,3 @@
+Tests the default configuration related to the handling of additional
+validation exceptions described in the IUCr DDLm dictionary style guide
+(see the --follow-iucr-style-guide option).
