@@ -1,0 +1,85 @@
+#\#CIF_2.0
+##############################################################################
+#                                                                            #
+#                TEST DICTIONARY FOR SOFTWARE TESTING PURPOSES               #
+#                                                                            #
+##############################################################################
+
+data_TEST_STYLE_GUIDE_DIC
+
+    _dictionary.title            TEST_STYLE_GUIDE_DIC
+    _dictionary.class            Reference
+    _dictionary.version          1.0.0
+    _dictionary.date             2021-11-03
+    _dictionary.uri              https://www.example.com/test_style_guide.dic
+    _dictionary.ddl_conformance  4.2.0
+    _dictionary.namespace        SoftwareTest
+    _description.text
+;
+     This dictionary contains fake definitions for validator testing purposes.
+;
+
+    loop_
+    _dictionary_audit.version
+    _dictionary_audit.date
+    _dictionary_audit.revision
+    1.0.0 2021-11-03 'Initial release of the dictionary.'
+
+save_TEST_STYLE_GUIDE_PARENT
+
+    _definition.id                TEST_STYLE_GUIDE_PARENT
+    _definition.scope             Category
+    _definition.class             Head
+    _definition.update            2021-11-03
+    _description.text
+;
+     This category is parent of all other categories in
+     the TEST_STYLE_GUIDE_DIC dictionary.
+;
+    _name.category_id             TEST_STYLE_GUIDE_DIC
+    _name.object_id               TEST_STYLE_GUIDE_PARENT
+
+save_
+
+save_TEST_STYLE_GUIDE_CATEGORY
+
+    _definition.id                TEST_STYLE_GUIDE_CATEGORY
+    _definition.scope             Category
+    _definition.class             Loop
+    _definition.update            2021-11-03
+    _description.text
+;
+     The attributes used to specify the aliased names of definitions.
+;
+    _name.category_id             TEST_STYLE_GUIDE_PARENT
+    _name.object_id               TEST_STYLE_GUIDE_CATEGORY
+    _category_key.name            '_test_style_guide_category.key'
+
+save_
+
+save_test_style_guide.key
+
+    _definition.id                '_test_style_guide_category.key'
+#    _definition.scope             Item
+#    _definition.class             Datum
+    _definition.update            2021-11-03
+    _description.text
+;
+     Key item of the TEST_STYLE_GUIDE_CATEGORY category.
+
+     The _definition.scope and _definition.class data item
+     should be omitted according to rule 3.1.6 since their
+     values match the default values.
+
+     On the other hand, the _type.container and _type.contents
+     data items should not be omitted even though they their
+     values match the default values.
+;
+    _name.category_id             test_style_guide_category
+    _name.object_id               key
+    _type.purpose                 Key
+    _type.source                  Assigned
+#    _type.container               Single
+#    _type.contents                Text
+
+save_
