@@ -1,0 +1,2 @@
+scripts/ddlm_validate: tests/cases/ddlm_validate_087.inp data_TEST_STYLE_GUIDE_DIC save_test_style_guide.key: NOTE, data item '_type.container' is mandatory in the 'Item' scope of the 'test_style_guide.key' frame.
+scripts/ddlm_validate: tests/cases/ddlm_validate_087.inp data_TEST_STYLE_GUIDE_DIC save_test_style_guide.key: NOTE, data item '_type.contents' is mandatory in the 'Item' scope of the 'test_style_guide.key' frame.
