@@ -1,0 +1,4 @@
+scripts/ddlm_validate: tests/cases/ddlm_validate_088.inp data_TEST_STYLE_GUIDE_DIC save_test_style_guide.key: NOTE, data item '_definition.class' is recommended in the 'Item' scope of the 'test_style_guide.key' frame.
+scripts/ddlm_validate: tests/cases/ddlm_validate_088.inp data_TEST_STYLE_GUIDE_DIC save_test_style_guide.key: NOTE, data item '_definition.scope' is recommended in the 'Item' scope of the 'test_style_guide.key' frame.
+scripts/ddlm_validate: tests/cases/ddlm_validate_088.inp data_TEST_STYLE_GUIDE_DIC save_test_style_guide.key: NOTE, data item '_type.container' is mandatory in the 'Item' scope of the 'test_style_guide.key' frame.
+scripts/ddlm_validate: tests/cases/ddlm_validate_088.inp data_TEST_STYLE_GUIDE_DIC save_test_style_guide.key: NOTE, data item '_type.contents' is mandatory in the 'Item' scope of the 'test_style_guide.key' frame.
