@@ -12,6 +12,9 @@ cod-tools (unreleased)
           the _type.indices_referenced_id attribute.
         - a check that detects improper usage of
           the _type.contents_referenced_id attribute.
+    - cif_ddlm_validate:
+        - the '--follow-iucr-style-guide' and '--no-follow-iucr-style-guide'
+          options.
   * Changed:
     - cif_molecule:
         - reworded several warning messages.
